[package]
name = "qubit-config"
version = "0.6.0"
edition = "2021"
rust-version = "1.70"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rust-config"
description = "Powerful type-safe configuration management with multi-value properties, variable substitution, and rich data type support"
homepage = "https://github.com/qubit-ltd/rust-config"
documentation = "https://docs.rs/qubit-config"
readme = "README.md"
keywords = ["config", "configuration", "settings", "properties", "qubit"]
categories = ["config", "development-tools"]
exclude = [
    "coverage.sh",
    "COVERAGE.md",
    "COVERAGE.zh_CN.md",
    ".circleci/*",
    "ci-check.sh",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_config"
doctest = false

[dependencies]
qubit-common = "0.5.0"
qubit-value = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
url = "2.5"
num-bigint = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
toml = { version = "1.1.2", features = ["parse"] }
serde_yaml = "0.9"
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "composite_config_source_tests"
path = "tests/source/composite_config_source_tests.rs"

[[test]]
name = "env_config_source_tests"
path = "tests/source/env_config_source_tests.rs"

[[test]]
name = "env_file_config_source_tests"
path = "tests/source/env_file_config_source_tests.rs"

[[test]]
name = "properties_config_source_tests"
path = "tests/source/properties_config_source_tests.rs"

[[test]]
name = "toml_config_source_tests"
path = "tests/source/toml_config_source_tests.rs"

[[test]]
name = "yaml_config_source_tests"
path = "tests/source/yaml_config_source_tests.rs"
