[package]
name = "qubit-config"
version = "0.12.0"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-config"
description = "Powerful type-safe configuration management with multi-value properties, variable substitution, and rich data type support"
homepage = "https://github.com/qubit-ltd/rs-config"
documentation = "https://docs.rs/qubit-config"
readme = "README.md"
keywords = ["config", "configuration", "settings", "properties", "qubit"]
categories = ["config", "development-tools"]
exclude = [
    "coverage.sh",
    "COVERAGE.md",
    "COVERAGE.zh_CN.md",
    ".circleci/*",
    "ci-check.sh",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_config"
doctest = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12"
url = "2.5"
num-bigint = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
toml = { version = "1.1", features = ["parse"] }
serde_yaml = "0.9"
dotenvy = "0.15"

qubit-datatype = "0.2"
qubit-serde = "0.2"
qubit-value = { version = "0.7", path = "../rs-value" }

[dev-dependencies]
tempfile = "3"

[[test]]
name = "composite_config_source_tests"
path = "tests/source/composite_config_source_tests.rs"

[[test]]
name = "config_field_tests"
path = "tests/field/config_field_tests.rs"

[[test]]
name = "config_read_options_tests"
path = "tests/options/config_read_options_tests.rs"

[[test]]
name = "env_config_source_tests"
path = "tests/source/env_config_source_tests.rs"

[[test]]
name = "env_file_config_source_tests"
path = "tests/source/env_file_config_source_tests.rs"

[[test]]
name = "properties_config_source_tests"
path = "tests/source/properties_config_source_tests.rs"

[[test]]
name = "toml_config_source_tests"
path = "tests/source/toml_config_source_tests.rs"

[[test]]
name = "yaml_config_source_tests"
path = "tests/source/yaml_config_source_tests.rs"
