[package]
name = "qubit-config"
version = "0.13.5"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-config"
description = "Powerful type-safe configuration management with multi-value properties, variable substitution, and rich data type support"
homepage = "https://github.com/qubit-ltd/rs-config"
documentation = "https://docs.rs/qubit-config"
readme = "README.md"
keywords = ["config", "configuration", "settings", "properties", "qubit"]
categories = ["config", "development-tools"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh_CN.md",
    "/RUST_CODING_STYLE.md",
    "/RUST_CODING_STYLE.zh_CN.md",
    "/doc/**/user_guide*.md",
    "/examples/**",
    "/resources/**",
    "/src/**",
    "/tests/**",
]

[lib]
name = "qubit_config"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[features]
default = ["rich-types", "source-env-file", "source-toml", "source-yaml"]
rich-types = ["dep:bigdecimal", "dep:chrono", "dep:num-bigint", "dep:url"]
source-env-file = ["dep:dotenvy"]
source-toml = ["dep:toml"]
source-yaml = ["dep:serde_norway"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
regex = "1.12"
chrono = { version = "0.4", features = ["serde"], optional = true }
url = { version = "2.5", optional = true }
num-bigint = { version = "0.4", features = ["serde"], optional = true }
bigdecimal = { version = "0.4", features = ["serde"], optional = true }
toml = { version = "0.9", features = ["parse"], optional = true }
serde_norway = { version = "0.9", optional = true }
dotenvy = { version = "0.15", optional = true }

qubit-datatype = "0.2"
qubit-serde = "0.2"
qubit-value = "0.7"

[dev-dependencies]
bigdecimal = "0.4"
chrono = { version = "0.4", features = ["serde"] }
num-bigint = "0.4"
tempfile = "3.27"
url = "2.5"

[[test]]
name = "composite_config_source_tests"
path = "tests/source/composite_config_source_tests.rs"

[[test]]
name = "config_field_tests"
path = "tests/field/config_field_tests.rs"

[[test]]
name = "config_field_builder_tests"
path = "tests/field/config_field_builder_tests.rs"

[[test]]
name = "config_field_name_builder_tests"
path = "tests/field/config_field_name_builder_tests.rs"

[[test]]
name = "config_read_options_tests"
path = "tests/options/config_read_options_tests.rs"

[[test]]
name = "env_config_source_tests"
path = "tests/source/env_config_source_tests.rs"

[[test]]
name = "env_file_config_source_tests"
path = "tests/source/env_file_config_source_tests.rs"

[[test]]
name = "config_parse_context_tests"
path = "tests/from/config_parse_context_tests.rs"

[[test]]
name = "config_source_tests"
path = "tests/source/config_source_tests.rs"

[[test]]
name = "from_config_tests"
path = "tests/from/from_config_tests.rs"

[[test]]
name = "helpers_tests"
path = "tests/from/helpers_tests.rs"

[[test]]
name = "into_config_default_tests"
path = "tests/from/into_config_default_tests.rs"

[[test]]
name = "properties_config_source_tests"
path = "tests/source/properties_config_source_tests.rs"

[[test]]
name = "toml_config_source_tests"
path = "tests/source/toml_config_source_tests.rs"

[[test]]
name = "yaml_config_source_tests"
path = "tests/source/yaml_config_source_tests.rs"
